--- a/app/src/main/res/layout/row_talk.xml
+++ b/app/src/main/res/layout/row_talk.xml
@@ -23,7 +23,7 @@
             tools:ignore="ContentDescription" />
 
         <LinearLayout
-            android:id="@+id/lineaLayoutUserData"
+            android:id="@+id/LL_userData"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -73,7 +73,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/lineaLayoutUserData"
+            app:layout_constraintTop_toBottomOf="@+id/LL_userData"
             app:layout_constraintVertical_bias="0.0"
             tools:ignore="ContentDescription" />
 
@@ -87,7 +87,7 @@
             android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@android:drawable/ic_menu_delete"
+            app:srcCompat="@drawable/ic_baseline_bin"
             app:tint="@color/bin"
             tools:ignore="ContentDescription" />
 
