correzioni varie file strings.xml Ora viene fatto il check sull'immagine prima di tentare il download da Firebase Storage (se il Talk/ l'Utente non hanno immagini) -> implementato hasImage/hasPicture

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="orange_light">#FFFFBB33</color>
     <color name="orange_dark">#FFFF8800</color>
     <color name="default_link">#FF1A0DAB</color>
-    <color name="yellow_textarea">#674E1B</color>
     <color name="default_primary_text">#FF000000</color>
     <color name="default_secondary_text">#808080</color>
+    <color name="red600">#E53935</color>
 </resources>
