Implementato MyLinearLayoutManager per rimuovere le animazioni dalla recycler view che portavano all'interruzione dell'applicazione

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -71,7 +71,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/button_style_orange"
-        android:onClick="loginUtente"
+        android:onClick="loginUser"
         android:text="@string/log_in"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
@@ -102,7 +102,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
-            android:onClick="registraNuovoCliente"
+            android:onClick="newUserRegistration"
             android:text="@string/join_now_2"
             android:textColor="@color/orange_light"
             android:textSize="14sp" />
